# rust-protobuf-example

./: README.md
proto/: buf.yaml
proto/payments/: payments.proto
rust/: Cargo.toml  build.rs
rust/src/: client.rs  server.rs
